<resources>
    <string name="app_name">RegisterNeo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textLog">Вход</string>
    <string name="textReg">Регистрация</string>
    <string name="home_name">Home</string>
    <string name="name_text">Имя</string>
    <string name="phoneNum_text">Номер телефона</string>
    <string name="code_text">СМС код</string>
    <string name="sms_text">Код был отправлен на номер +996(705)464228</string>
    <string name="sms_enter_text">Введите код</string>
    <string name="resend_text">Если код не пришел, нажмите кнопку отправить повторно</string>
    <string name="continBtn">Далее</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>
