<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/neoregister"
    tools:context=".login.LogCodeFragment">

    <TextView
        android:id="@+id/code_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin_register"
        android:fontFamily="@font/roboto"
        android:text="@string/code_text"
        android:textColor="@color/white"
        android:textSize="@dimen/login_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sms_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/roboto"
        android:text="@string/sms_text"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_text" />

    <TextView
        android:id="@+id/sms_enter_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto"
        android:text="@string/sms_enter_text"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sms_text" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sms_enter_text"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/codeOne"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/otp_item_bg"
            android:cursorVisible="false"
            android:enabled="true"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/gray"
            android:textCursorDrawable="@null"
            android:textSize="15pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/codeTwo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/otp_item_bg"
            android:cursorVisible="false"
            android:enabled="false"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/gray"
            android:textCursorDrawable="@null"
            android:textSize="15pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/codeThree"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/otp_item_bg"
            android:cursorVisible="false"
            android:enabled="false"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/gray"
            android:textCursorDrawable="@null"
            android:textSize="15pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/codeFour"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/otp_item_bg"
            android:cursorVisible="false"
            android:enabled="false"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:maxLength="1"
            android:maxLines="1"
            android:textColor="@color/gray"
            android:textCursorDrawable="@null"
            android:textSize="15pt"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"

        android:layout_marginTop="27dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rounded_style"
        android:text="Подтвердить"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/resend_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto"
        android:text="@string/resend_text"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_button" />

    <Button
        android:id="@+id/resend_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rounded_style"
        android:text="Отправить повторно"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resend_text" />

</androidx.constraintlayout.widget.ConstraintLayout>